# bordair-multimodal-v1

./: .gitignore  README.md  generate_benign.py  generate_benign_expanded.py  generate_benign_multimodal.py  generate_payloads.py  generate_v4_crossmodal.py  generate_v4_payloads.py  generate_v5_payloads.py  ingest_v5_external.py  scale_benign_v5.py
benign/: multimodal_image_document.json  multimodal_quad.json  multimodal_text_audio.json  multimodal_text_image.json  multimodal_triple.json  summary.json  v4cm_image_document.json  v4cm_text_audio.json  v4cm_text_document.json  v4cm_text_image_full.json  v4cm_text_image_split.json  v4cm_triple.json  v5_text_only_001.json  v5_text_only_002.json  v5_text_only_003.json  v5_text_only_004.json  v5_text_only_005.json  v5_text_only_006.json  v5_text_only_007.json  v5_text_only_008.json  v5_text_only_009.json  v5_text_only_010.json  v5_text_only_011.json  v5_text_only_012.json  v5_text_only_013.json  v5_text_only_014.json  v5_text_only_015.json  v5_text_only_016.json  v5_text_only_017.json  v5_text_only_018.json  v5_text_only_019.json  v5_text_only_020.json  v5_text_only_021.json  v5_text_only_022.json  v5_text_only_023.json  v5_text_only_024.json  v5_text_only_025.json  v5_text_only_026.json  v5_text_only_027.json  v5_text_only_028.json  (+13 more)
bordair_cli/: README.md  install.sh  pyproject.toml
bordair_cli/src/bordair/: __init__.py  __main__.py  evaluator.py  judge.py  loader.py
payloads/: summary.json
payloads/image_document/: image_document_001.json  image_document_002.json  (+1 more)
payloads_v4/: summary_v4.json
payloads_v4_crossmodal/: summary_v4_crossmodal.json
payloads_v5/: summary_v5.json
payloads_v5_external/: summary_v5_external.json
(+499 files in other folders)
