[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bordair"
version = "0.1.0"
description = "Test any LLM against the Bordair multimodal prompt injection dataset (503K+ labeled samples)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Bordair", email = "joshuablythe5@gmail.com" }]
requires-python = ">=3.9"
keywords = ["llm", "security", "prompt-injection", "redteam", "evaluation", "multimodal", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25",
    "rich>=13.7",
    "click>=8.1",
    "datasets>=2.14",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "ruff>=0.1"]

[project.scripts]
bordair = "bordair.__main__:main"

[project.urls]
Homepage = "https://bordair.io"
Repository = "https://github.com/Josh-blythe/bordair-multimodal"
Dataset = "https://huggingface.co/datasets/Bordair/bordair-multimodal"
Issues = "https://github.com/Josh-blythe/bordair-multimodal/issues"

[tool.setuptools.packages.find]
where = ["src"]
